<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
	<string name="app_name">Prototype</string>
	<string name="test_set__title">Test Set Activity</string>
	<string name="test_set__ok_button_text">OK</string>
	<string name="test_set__cancel_button_text">Cancel</string>
	<string name="test_set__simple_dialog_button_text">Simple Dialog</string>
	<string name="intent_test__title">IntestTestActivity</string>
	<string name="test_set__open_intent_test_button_text"> Intent Test</string>
	<string name="test_set__progress_dialog_button_text">Progress Dialog</string>
	<string name="test_set__complex_progress_dialog_button_text">Complex Progress Dialog 	</string>
	<string name="login_test__ok_button_text">OK</string>
	<string name="intent_test__show_passed_info_button_text">Show passed info</string>
	<string name="intent_test__go_back_button_text">Go Back To Main Activity</string>
	<string name="login_test__title">LoginActivity</string>
	<string name="test_set__open_login_test_button_text">Login</string>
	<string name="fragment_test__title">FragmentTestActivity</string>
	<string name="test_set__open_fragment_test_button_text">Fragment Test</string>
	<string name="built_in_apps_test__title">Test built-in apps</string>
	<string name="built_in_apps_test__open_built_in_browser_button_text">Open Browser</string>
	<string name="built_in_apps_test__open_built_in_map_button_text">Open Google Map</string>
	<string name="test_set__open_built_in_apps_test_button_text">Built-in apps test</string>
	<string name="test_01_notification__title">Test01Notification</string>
	<string name="test_set__show_notification_button_text">Show notification</string>
	<string name="main_tab__title">Prototype</string>
	<string name="basic_info__title">BasicInfoActivity</string>
	<string name="action_settings">settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="test_set__open_navigation_drawer_test_button_text"> Navigation Drawser Test 
	</string>
	<string name="test_01_notification__message">Here are notifications</string>
	<string name="basic_info__add_cell_button_text">Click to add cell</string>
	<string name="navigation_drawer_test__title">NavigationDrawerTest</string>
	<string name="navigation_drawer_test__drawer_button_title">Drawer</string>
	<string name="app_id">574220329331308</string>
	<string name="who_likes_me__title">FacebookTest</string>
	<string name="test_set__open_facebook_test_button_text">Facebook</string>
	<string name="vivid_camera__test_camera_button_text">Test camera</string>
	<string name="vivid_camera__open_camera_button_text">Click to take a picture</string>
	<string name="vividcamera__preview__title">Preview</string>
	<string name="vividcamera__take_picture_button_text">Picture</string>
	<string name="vividcamera__take_screenshot_button_text">Capture</string>
</resources>